--- a/app/www/static/templates/index.html
+++ b/app/www/static/templates/index.html
@@ -30,10 +30,10 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nobile" />
 
     <!-- Bootstrap Core CSS -->
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 
     <!-- Custom CSS -->
-    <link href="{{ url_for('static', filename='css/bartola.css') }}"  rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bartola.css') }}">
 
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
