--- a/app/www/static/templates/index.html
+++ b/app/www/static/templates/index.html
@@ -30,10 +30,10 @@
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nobile" />
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bartola.css') }}">
+    <link href="{{ url_for('static', filename='css/bartola.css') }}"  rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -50,15 +50,11 @@
       <!-- React app entry point -->
   </div>
 
-  {% compress 'js' %}
-
   <!-- React app bundle  -->
   <script src="{{ url_for('static', filename='js/bundle.js') }}"></script>
 
   <!-- Vendor bundle -->
   <script src="{{ url_for('static', filename='js/vendors~main.bundle.js') }}" defer></script>
-
-  {% endcompress %}
 
 </body>
 
