--- a/app/www/static/less/resets.less
+++ b/app/www/static/less/resets.less
@@ -1,9 +1,9 @@
 /** Reset CSS Styles. These will be the default styles for the specified HTML elements **/
 
-@import "globals";
+@import 'globals';
 
 * {
-  font-family: "Montserrat","Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 body {
