--- a/app/www/static/css/resets.css
+++ b/app/www/static/css/resets.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 * {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 body {
   background-color: #333;
