--- a/app/www/static/templates/index.html
+++ b/app/www/static/templates/index.html
@@ -25,9 +25,9 @@
     <title>{% block title %}Jesse Bartola{% endblock %}</title>
 
     <!-- Ubuntu Font CSS -->
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
+    <link rel="preload" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
     <!-- Nobile Font CSS -->
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Nobile" />
+    <link rel="preload" type="text/css" href="//fonts.googleapis.com/css?family=Nobile" />
 
     <!-- Bootstrap Core CSS -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
