Add accessibility aria tags, tabindex to nav buttons

--- a/app/www/static/css/resets.css
+++ b/app/www/static/css/resets.css
@@ -6,6 +6,9 @@
 * {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
+h1 {
+  font-size: 2rem !important;
+}
 body {
   background-color: #333;
 }
