--- a/app/www/static/templates/index.html
+++ b/app/www/static/templates/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-72248183-2"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JL6JE0EDWL"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-72248183-2');
+      gtag('config', 'G-JL6JE0EDWL');
     </script>
 
     <meta charset="utf-8">
